[package]
name = "sokoban-rs-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type =["cdylib"]

[dependencies]
wasm-bindgen = "0.2.83"
regex = "1.7.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
once_cell = "1.16.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
debug = true

[features]
default = ["console_error_panic_hook"]
